2006-10-30  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* updated documentation

2006-10-27  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* fix ocaml -g 
	* add docclean target
	* prepare doc generation

2006-10-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* Taras Glek's bug fixed: iostream header yields a IN_expr with a
	null expression (nullable IN_expr.e); seems to be a real elsa bug

2006-10-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* use iterators for list serialization in hand written
	serialization functions (obey left-to-right order)

	* fixed bug in ocaml serialization (FunctionType)
	* added indentation in check-oast

2006-09-30  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* check-oast adopted; barfs on t0030.cc.oast

2006-09-30  Hendrik Tews  <tews@debian>

	* ast_graph adopted

2006-09-29  Hendrik Tews  <tews@debian>

	* revert stupid ast_graph change

2006-09-29  Hendrik Tews  <tews@tandem.cs.ru.nl>

	* adopted astiter, astiternodes, count-ast, ast_util, ast_graph
	* ast_graph has some problem

	* regressiontests pass !!!
	* changed Enumerator.enumValue to int32
	* added int32 support to astgen

	* changed default array designator value to -1; 
	  add check for positive designators in check_designator_list
	* more nullness stuff (results are added to the previous log entry)
	

2006-09-27  Hendrik Tews  <tews@debian>

	* regression test up to 857
	
	* nullable analysis for xml fields
	  - fields with nullable assignment for which at least one
	  regression test gives NULL

	  TS_name.nondependentVar
	  E_variable.nondependentVar
	  Function.receiver
	  Function.retVar
	  E_throw.globalVar
	  Handler.globalVar
	  MemberInit.base
	  MemberInit.ctorVar
	  E_new.arraySize
	  E_new.ctorVar
	  E_new.heapVar
	  MemberInit.member
	  Variable.type	            IFF Variable.flags & DF_NAMESPACE
	  E_constructor.ctorVar
	  EnumType.name
	  CompoundType.name
	  CompoundType.instName
	  BaseClassSpec.type
	  E_variable.var
	  PQ_qualifier.qualifierVar
	  E_variable.type