@@ -104,8 +104,8 @@ is pure luck that it passes the regression tests.)
 <H3>Download Elsa+Olmar</H3>
 choose from the following alternative:
 <UL>
-<LI>Releases: <A
-HREF="http://www.cs.ru.nl/~tews/olmar/elsa-2005.08.22b-olmar-@RELEASEDATE@.tar.gz"
+<LI>current release: <A
+HREF="http://www.cs.ru.nl/~tews/olmar/releases/elsa-2005.08.22b-olmar-@RELEASEDATE@.tar.gz"
 >elsa-2005.08.22b-olmar-@RELEASEDATE@.tar.gz</A>
 </LI>
 <LI><A HREF="http://www.sos.cs.ru.nl/cgi-bin/~tews/olmar/viewvc-patch.cgi/elsa/" >Browse the cvs
@@ -117,6 +117,10 @@ repository</A>
 cvs -d :pserver:anon@cvs-srv.cs.kun.nl:/robin co elsa
 </PRE>
 </BLOCKQUOTE></LI>
+<LI>
+<A HREF="http://www.cs.ru.nl/~tews/olmar/releases/" >older
+releases</A>
+</LI>
 </UL>
 
 <H3>Configure</H3>
