@@ -1,5 +1,7 @@
 2006-10-30  Hendrik Tews  <tews@tandem.cs.ru.nl>
 
+	* small release/snapshot fixes
+
 	* updated documentation
 
 2006-10-27  Hendrik Tews  <tews@tandem.cs.ru.nl>
